--- a/01-ejercicio1/index.html
+++ b/01-ejercicio1/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="declaracion_variables.js"></script>
+    <script src="1-declaracionVariables.js"></script>
 </body>
 </html>
